[ORGA] Extract external link classes

--- a/orga/app/components/information-banner.hbs
+++ b/orga/app/components/information-banner.hbs
@@ -6,6 +6,7 @@
       @options={{hash
         faIcon=(component 'fa-icon' icon='external-link-alt')
         linkTo=(component 'link-to' (t 'banners.import.link-to') 'authenticated.sco-students' class="link link--white link--bold link--underlined")
+        externalLinkClasses='"link link--white link--bold link--underlined"'
       }}
     />
   </PixBanner>
@@ -17,6 +18,7 @@
       @options={{hash
         faIcon=(component 'fa-icon' icon='external-link-alt')
         documentationLink=this.documentationLink
+        externalLinkClasses='"link link--white link--bold link--underlined"'
     }}
     />
   </PixBanner>
