[ORGA] Extract documentationLink

--- a/orga/app/components/information-banner.hbs
+++ b/orga/app/components/information-banner.hbs
@@ -6,6 +6,8 @@
       @options={{hash
         faIcon=(component 'fa-icon' icon='external-link-alt')
         linkTo=(component 'link-to' (t 'banners.import.link-to') 'authenticated.sco-students' class="link link--white link--bold link--underlined")
+        middleSchoolDocumentationLink='"https://view.genial.ly/5f295b80302a810d2ff9fa60/?idSlide=cd748a12-ef8e-4683-8139-eb851bd0eb23"'
+        highSchoolDocumentationLink='"https://view.genial.ly/5f46390591252c0d5246bb63/?idSlide=cd748a12-ef8e-4683-8139-eb851bd0eb23"'
         externalLinkClasses='"link link--white link--bold link--underlined"'
       }}
     />
