Rename badges into insight
When 'badges' means 'clé de lecture', it is renamed

--- a/admin/app/templates/authenticated/target-profiles/target-profile.hbs
+++ b/admin/app/templates/authenticated/target-profiles/target-profile.hbs
@@ -37,7 +37,7 @@
     <LinkTo @route="authenticated.target-profiles.target-profile.organizations" @model={{@model}} class="navbar-item">
       Organisations
     </LinkTo>
-    <LinkTo @route="authenticated.target-profiles.target-profile.badges" @model={{@model}} class="navbar-item">
+    <LinkTo @route="authenticated.target-profiles.target-profile.insight" @model={{@model}} class="navbar-item">
       Clés de lecture
     </LinkTo>
   </nav>
