--- a/admin/app/components/target-profiles/insight.hbs
+++ b/admin/app/components/target-profiles/insight.hbs
@@ -2,7 +2,7 @@
 
   <section class="badges__section">
     <h2 class="badges-section__title">Résultats thématiques</h2>
-    <TargetProfiles::BadgeList
+    <TargetProfiles::Badges
       @model={{@model.badges}} />
   </section>
 
