--- a/admin/app/styles/components/target-profiles/badges.scss
+++ b/admin/app/styles/components/target-profiles/badges.scss
@@ -1,18 +1,21 @@
-.badges {
-  &__section {
-    padding: 0;
-    margin-top: 60px;
-
-    &:first-of-type {
-      margin-top: 0;
-    }
+.badges-table {
+  &__id {
+    width: 75px;
   }
-}
 
-.badges-section {
-  &__title {
-    font-size: 1.4rem;
-    display: inline-block;
-    margin-bottom: 20px;
+  &__key {
+    width: 200px;
+  }
+
+  &__name {
+    width: 250px;
+  }
+
+  &__image {
+    width: 126px;
+
+    img {
+      width: 90px;
+    }
   }
 }
