--- a/orga/servers.conf.erb
+++ b/orga/servers.conf.erb
@@ -78,13 +78,13 @@ server {
   add_header X-Frame-Options "SAMEORIGIN";
   add_header X-XSS-Protection 1;
 
-  <% ENV.each do |key,value| %>
-    <% if key.start_with? 'ADD_HTTP_HEADER' %>
+  <% ENV.each do |key,value|
+    if key.start_with? 'ADD_HTTP_HEADER' %>
       add_header <%=
-          key.sub(/^ADD_HTTP_HEADER_/, '').split("_").map(&:capitalize).join("-")
-        %> "<%=
-          value.gsub('\\', '\\\\\\\\').gsub('"','\\"').gsub('$','\\$')
-        %>" ;
-    <% end %>
-  <% end %>
+        key.sub(/^ADD_HTTP_HEADER_/, '').split("_").map(&:capitalize).join("-")
+      %> "<%=
+        value.gsub('\\', '\\\\\\\\').gsub('"','\\"').gsub('$','\\$')
+      %>" ;
+    <% end
+  end %>
 }
