Move the fat bee to illustrations

--- a/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
+++ b/mon-pix/app/components/routes/campaigns/assessment/skill-review.hbs
@@ -7,7 +7,7 @@
   {{#if @model.campaignParticipation.campaign.isArchived}}
 
     <div class="skill-review__campaign-archived">
-      <img class="skill-review__campaign-archived-image " src="{{this.rootURL}}/images/bees/fat-bee.svg" alt="" role="none">
+      <img class="skill-review__campaign-archived-image " src="{{this.rootURL}}/images/illustrations/fat-bee.svg" alt="" role="none">
       <p class="skill-review__campaign-archived-text">
         {{t 'pages.skill-review.archived' htmlSafe=true}}
       </p>
