--- a/mon-pix/app/templates/campaigns/profiles-collection/profile-already-shared.hbs
+++ b/mon-pix/app/templates/campaigns/profiles-collection/profile-already-shared.hbs
@@ -5,7 +5,7 @@
   <div class="background-banner"></div>
   <PixBlock @shadow="heavy" class="send-profile-header">
     <div class="send-profile-header__announcement">
-      <img class="send-profile-header__image" src="{{rootURL}}/images/bees/fat-bee.svg" alt={{t "pages.profile-already-shared.first-title"}}>
+      <img class="send-profile-header__image" src="{{rootURL}}/images/illustrations/fat-bee.svg" alt={{t "pages.profile-already-shared.first-title"}}>
       <p class="send-profile-header__instruction">
         {{t "pages.profile-already-shared.explanation" organization=this.model.campaign.organizationName date=this.model.sharedProfile.sharedAt hour=this.model.sharedProfile.sharedAt htmlSafe=true}}
       </p>
