Move partner logo in logo folder

--- a/mon-pix/app/templates/components/signin-form.hbs
+++ b/mon-pix/app/templates/components/signin-form.hbs
@@ -56,7 +56,7 @@
     </div>
 
       <LinkTo @route="login-pe"class="sign-form-body__pe-connect-link"  aria-label="{{t 'pages.sign-in.pole-emploi.link.title'}}">
-        <img class="icon-pe-connect-hover" src="{{this.rootURL}}/images/pe-connect-logo.svg"
+        <img class="icon-pe-connect-hover" src="{{this.rootURL}}/images/logo/pe-connect-logo.svg"
            alt="{{t 'pages.sign-in.pole-emploi.link.img'}}"
         />
         <span>{{t 'pages.sign-in.pole-emploi.title'}}</span>
