Move hexa background to background

--- a/mon-pix/app/styles/components/_certifications-list-item.scss
+++ b/mon-pix/app/styles/components/_certifications-list-item.scss
@@ -106,7 +106,7 @@
   }
 
   margin-left: 10%;
-  background: url('/images/hexa-pix.svg') no-repeat;
+  background: url('/images/background/hexa-pix.svg') no-repeat;
   background-size: cover;
   text-align: center;
   display: table;
