--- a/mon-pix/app/styles/components/_hexagon-score.scss
+++ b/mon-pix/app/styles/components/_hexagon-score.scss
@@ -1,7 +1,7 @@
 .hexagon-score {
   width: 132px;
   height: 148px;
-  background: url('/images/hexa-pix-blue.svg') no-repeat center center;
+  background: url('/images/background/hexa-pix-blue.svg') no-repeat center center;
   background-size: cover;
 
   &__content {
