lint: remove style-concatenation exception

--- a/mon-pix/app/templates/components/challenge-embed-simulator.hbs
+++ b/mon-pix/app/templates/components/challenge-embed-simulator.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable style-concatenation --}}
 <div class="challenge-embed-simulator" style="{{this.embedDocumentHeightStyle}}">
   {{#if this.isLoadingEmbed}}
     <div class="embed placeholder blurred" aria-label="{{t "pages.challenge.embed-simulator.placeholder"}}">
