lint: remove link-rel-noopener

--- a/mon-pix/app/templates/components/footer.hbs
+++ b/mon-pix/app/templates/components/footer.hbs
@@ -15,25 +15,25 @@
       <div class="footer-container-content__navigation">
         <a href="{{t 'navigation.footer.link-help-center'}}"
            target="_blank"
-           class="footer-navigation__item">
+           class="footer-navigation__item" rel="noopener noreferrer">
           {{t 'navigation.footer.help-center'}}
         </a>
 
         <a href="{{t 'navigation.footer.link-a11y'}}"
            target="_blank"
-           class="footer-navigation__item">
+           class="footer-navigation__item" rel="noopener noreferrer">
           {{t 'navigation.footer.a11y'}}
         </a>
 
         <a href="{{this.cguUrl}}"
            target="_blank"
-           class="footer-navigation__item">
+           class="footer-navigation__item" rel="noopener noreferrer">
           {{t 'navigation.footer.eula'}}
         </a>
 
         <a href="{{this.dataProtectionPolicyUrl}}"
            target="_blank"
-           class="footer-navigation__item">
+           class="footer-navigation__item" rel="noopener noreferrer">
           {{t 'navigation.footer.data-protection-policy'}}
         </a>
       </div>
