--- a/mon-pix/app/templates/components/navbar-burger-menu.hbs
+++ b/mon-pix/app/templates/components/navbar-burger-menu.hbs
@@ -20,7 +20,7 @@
     {{t 'navigation.user.certifications'}}
   </LinkTo>
 
-  <a href="{{t 'navigation.main.link-help'}}" target="_blank" class="navbar-burger-menu-user-info__item">
+  <a href="{{t 'navigation.main.link-help'}}" target="_blank" class="navbar-burger-menu-user-info__item" rel="noopener noreferrer">
     {{t 'navigation.main.help'}}
   </a>
 
