--- a/mon-pix/app/templates/components/user-logged-menu.hbs
+++ b/mon-pix/app/templates/components/user-logged-menu.hbs
@@ -35,7 +35,7 @@
               </LinkTo>
             </li>
             <li>
-              <a href="{{t 'navigation.main.link-help'}}" target="_blank" class="logged-user-menu__link">
+              <a href="{{t 'navigation.main.link-help'}}" target="_blank" class="logged-user-menu__link" rel="noopener noreferrer">
                 {{t 'navigation.main.help'}}
               </a>
             </li>
