--- a/mon-pix/app/templates/components/routes/login-or-register.hbs
+++ b/mon-pix/app/templates/components/routes/login-or-register.hbs
@@ -25,7 +25,7 @@
         {{#if @displayRegisterForm}}
           <button id="login-button" {{action @toggleFormsVisibility}} class="button button--white button--bordered button--uppercase" type="button">{{t 'pages.login-or-register.login-form.button'}}</button>
         {{/if}}
-        <div class={{concat "login-or-register-panel-form__expandable" (if (not @displayRegisterForm) " login-or-register-panel-form__expandable--expanded")}}>
+        <div class={{concat "login-or-register-panel-form__expandable" (unless @displayRegisterForm " login-or-register-panel-form__expandable--expanded")}}>
           {{#unless @displayRegisterForm}}
             <Routes::LoginForm @addGarAuthenticationMethodToUser={{@addGarAuthenticationMethodToUser}} />
           {{/unless}}
