lint: remove no-inline-styles

--- a/mon-pix/app/templates/application.hbs
+++ b/mon-pix/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this  --}}
+{{!-- template-lint-disable no-implicit-this no-inline-styles --}}
 {{page-title (t 'navigation.pix')}}
 <div class="body">
   <CommunicationBanner />
