--- a/mon-pix/app/templates/components/challenge-embed-simulator.hbs
+++ b/mon-pix/app/templates/components/challenge-embed-simulator.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable style-concatenation --}}
+{{!-- template-lint-disable style-concatenation no-inline-styles --}}
 <div class="challenge-embed-simulator" style="{{this.embedDocumentHeightStyle}}">
   {{#if this.isLoadingEmbed}}
     <div class="embed placeholder blurred" aria-label="{{t "pages.challenge.embed-simulator.placeholder"}}">
