lint: remove no-triple-curlies

--- a/mon-pix/app/components/routes/campaigns/restricted/join-sup.hbs
+++ b/mon-pix/app/components/routes/campaigns/restricted/join-sup.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable require-input-label --}}
+{{!-- template-lint-disable require-input-label no-triple-curlies --}}
 <form>
   <div class="join-restricted-campaign__row">
     <label class="join-restricted-campaign__label">{{t 'pages.join.sup.fields.student-number.label'}}</label>
