--- a/mon-pix/app/templates/components/campaign-start-block.hbs
+++ b/mon-pix/app/templates/components/campaign-start-block.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this  no-action --}}
+{{!-- template-lint-disable no-implicit-this no-action no-triple-curlies --}}
 <main class="rounded-panel campaign-landing-page__container__start">
   <div class="campaign-landing-page__start__image__container">
     <div class="campaign-landing-page__pix-logo">
