--- a/mon-pix/app/templates/components/new-information.hbs
+++ b/mon-pix/app/templates/components/new-information.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-triple-curlies --}}
 <div class="new-information {{@backgroundColorClass}}">
   <div class="new-information__content">
     {{#if (media 'isDesktop')}}
