--- a/mon-pix/app/templates/components/qrocm-ind-solution-panel.hbs
+++ b/mon-pix/app/templates/components/qrocm-ind-solution-panel.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-triple-curlies --}}
 <div class="qrocm-solution-panel rounded-panel">
   <div class="rounded-panel__row correction-qrocm__text">
     {{#each this.inputFields as |field|}}
