--- a/admin/app/components/target-profiles/stages.hbs
+++ b/admin/app/components/target-profiles/stages.hbs
@@ -1,6 +1,6 @@
 <div class="content-text content-text--small">
   {{#if this.hasStages}}
-    <div class="table-admin stages-table">
+    <div class="table-admin">
       <table>
         <thead>
         <tr>
