--- a/orga/app/components/routes/authenticated/team/items.hbs
+++ b/orga/app/components/routes/authenticated/team/items.hbs
@@ -5,13 +5,16 @@
   {{#unless this.isEditionMode }}
     <td>{{@membership.displayRole}}</td>
     {{#if (not-eq @membership.user.id this.currentUser.prescriber.id) }}
-      <td>
-        <div class="zone-edit-role">
-          <button id='edit-organization-role' class="button button--light-grey button--thin"
-                  type="button" {{on 'click' (fn this.editRoleOfMember @membership)}}>
+      <td class="zone-edit-role">
+        <Dropdown::IconTrigger
+                @icon="ellipsis-v"
+                @dropdownButtonClass="zone-edit-role__dropdown-button"
+                @dropdownContentClass="zone-edit-role__dropdown-content"
+        >
+          <Dropdown::Item @onClick={{fn this.editRoleOfMember @membership}} aria-label="Modifier le rôle">
             Modifier le rôle
-          </button>
-        </div>
+          </Dropdown::Item>
+        </Dropdown::IconTrigger>
       </td>
     {{else}}
       <td></td>
