--- a/orga/app/styles/pages/authenticated/team/list.scss
+++ b/orga/app/styles/pages/authenticated/team/list.scss
@@ -1,3 +1,5 @@
+$margin-right: 32px;
+
 .list-team-page {
   display: flex;
   flex-direction: column;
@@ -30,11 +32,21 @@
 }
 
 .zone-edit-role {
+  align-items: center;
   box-sizing: border-box;
   display: flex;
   height: inherit;
   justify-content: flex-end;
   padding-right: 25px;
+
+  &__dropdown-button {
+    margin-right: $margin-right;
+  }
+
+  &__dropdown-content {
+    width: 200px;
+    right: $margin-right;
+  }
 }
 
 .zone-save-cancel-role {
