[ORGA] Translate modify student(SUP) number modal

--- a/orga/app/components/edit-student-number-modal.hbs
+++ b/orga/app/components/edit-student-number-modal.hbs
@@ -1,10 +1,10 @@
-<Modal::Dialog class="edit-student-number-modal" @title="Édition du numéro étudiant" @display={{@display}} @close={{this.close}}>
+<Modal::Dialog class="edit-student-number-modal" @title={{t "pages.students-sup.edit-student-number-modal.title"}} @display={{@display}} @close={{this.close}}>
   <form {{on 'submit' (fn this.updateStudentNumber)}}>
     <Modal::Body class="edit-student-number-modal__content">
       {{#if @student.studentNumber}}
-        <p class="content-text">Numéro étudiant actuel de {{@student.firstName}} {{@student.lastName}} est : <span class=" content-text--info">{{@student.studentNumber}}</span></p>
+        <p class="content-text">{{t "pages.students-sup.edit-student-number-modal.form.student-number" firstName=@student.firstName  lastName=@student.lastName }}<span class=" content-text--info">{{@student.studentNumber}}</span></p>
       {{/if}}
-      <label for="studentNumber" class="content-text">Nouveau numéro étudiant</label>
+      <label for="studentNumber" class="content-text">{{t "pages.students-sup.edit-student-number-modal.form.new-student-number-label"}}</label>
       <div class="input-container">
         <Input
           id="studentNumber"
@@ -19,8 +19,8 @@
       </div>
     </Modal::Body>
     <Modal::Footer class="edit-student-number-modal__actions">
-      <button type="button" class="button button--light-grey" {{on 'click' this.close}}>Annuler</button>
-      <button type="submit" disabled={{this.isDisabled}} class="button">Mettre à jour</button>
+      <button type="button" class="button button--light-grey" {{on 'click' this.close}}>{{t "pages.students-sup.edit-student-number-modal.actions.cancel"}}</button>
+      <button type="submit" disabled={{this.isDisabled}} class="button">{{t "pages.students-sup.edit-student-number-modal.actions.update"}}</button>
     </Modal::Footer>
   </form>
 </Modal::Dialog>
