Create new stage from pix-admin
Co-authored-by: François de Metz <francois.de-metz@pix.fr>

--- a/admin/app/components/target-profiles/insight.hbs
+++ b/admin/app/components/target-profiles/insight.hbs
@@ -10,7 +10,7 @@
     <h2 class="insight-section__title">Paliers</h2>
     <TargetProfiles::Stages
             @stages={{@model.stages}}
-            @targetProfileImageUrl={{@model.targetProfileImageUrl}}/>
+            @targetProfile={{@model.targetProfile}}/>
   </section>
 
 </section>
