--- a/orga/app/templates/authenticated/team/list/members.hbs
+++ b/orga/app/templates/authenticated/team/list/members.hbs
@@ -1,1 +1,1 @@
-<Routes::Authenticated::Team::Members @memberships={{@model}}/>
+<Routes::Authenticated::Team::Members @memberships={{@model}} @removeMembership={{this.removeMembership}} />
