Rollback the remove of rule no-unused-block-params in burger menu

--- a/mon-pix/app/templates/components/navbar-mobile-header.hbs
+++ b/mon-pix/app/templates/components/navbar-mobile-header.hbs
@@ -11,7 +11,9 @@
           {{/if}}
         </span>
 
-        <NavbarBurgerMenu class="navbar-burger-menu-content"/>
+        {{#@burger.menu as |menu|}}
+          <NavbarBurgerMenu class="navbar-burger-menu-content"/>
+        {{/@burger.menu}}
       {{/if}}
     {{/if}}
 
