Rollback the remove of rule no-unused-block-params in burger menu

--- a/mon-pix/app/templates/components/navbar-mobile-header.hbs
+++ b/mon-pix/app/templates/components/navbar-mobile-header.hbs
@@ -1,4 +1,4 @@
-{{!-- template-lint-disable no-implicit-this no-action no-curly-component-invocation no-invalid-interactive --}}
+{{!-- template-lint-disable no-implicit-this no-action no-curly-component-invocation no-invalid-interactive no-unused-block-params --}}
 <div class="navbar-mobile-header">
   <div class="navbar-mobile-header__container">
     {{#if @burger}}
