Access pix-ui colors

--- a/mon-pix/app/styles/app.scss
+++ b/mon-pix/app/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'ember-burger-menu/animations/push';
 @import "ember-modal-dialog/ember-modal-structure";
 @import "ember-modal-dialog/ember-modal-appearance";
+@import 'colors';
 
 /* globals */
 @import 'globals/a11y';
