Remove colors that are duplicated with pix-ui

--- a/mon-pix/app/styles/components/_congratulations-certification-banner.scss
+++ b/mon-pix/app/styles/components/_congratulations-certification-banner.scss
@@ -1,6 +1,6 @@
 .congratulations-banner {
   text-rendering: optimizeLegibility;
-  background: $green-gradient;
+  background: $pix-green-gradient;
   position: relative;
   color: $grey-10;
   border-radius: 6px;
