--- a/mon-pix/app/styles/components/_new-information.scss
+++ b/mon-pix/app/styles/components/_new-information.scss
@@ -41,7 +41,7 @@
   }
 
   &--blue-gradient-background {
-    background-image: $default-gradient;
+    background-image: $pix-gradient;
     background-color: rgb(5, 108, 255);
   }
 
