--- a/mon-pix/app/styles/components/_user-certifications-detail-banner.scss
+++ b/mon-pix/app/styles/components/_user-certifications-detail-banner.scss
@@ -1,7 +1,7 @@
 .certification-background-banner {
   width: 100%;
   min-height: 270px;
-  background: $default-gradient;
+  background: $pix-gradient;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
   color: $white;
   position: absolute;
