--- a/mon-pix/app/styles/pages/_login-or-register-to-access-restricted-campaign.scss
+++ b/mon-pix/app/styles/pages/_login-or-register-to-access-restricted-campaign.scss
@@ -1,5 +1,5 @@
 .login-or-register-to-access-restricted-campaign {
-  background: $default-gradient;
+  background: $pix-gradient;
   display: flex;
   justify-content: center;
   min-height: 100vh;
