--- a/mon-pix/app/styles/pages/_terms-of-service.scss
+++ b/mon-pix/app/styles/pages/_terms-of-service.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100px;
   min-height: 100vh;
-  background: $default-gradient;
+  background: $pix-gradient;
   align-items: center;
 }
 
