--- a/mon-pix/app/styles/components/_certification-banner.scss
+++ b/mon-pix/app/styles/components/_certification-banner.scss
@@ -6,7 +6,7 @@
     align-items: flex-start;
     width: 100%;
     height: 270px;
-    background: $green-gradient;
+    background: $pix-green-gradient;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
     color: $white;
   }
