--- a/mon-pix/app/styles/globals/_colors.scss
+++ b/mon-pix/app/styles/globals/_colors.scss
@@ -1,74 +1,21 @@
 // See https://zeroheight.com/8dd127da7/p/839645-couleurs/b/21317a
 
 // primary
-$blue: #3D68FF;
-$blue-zodiac: #505F79;
 $white: #FFFFFF;
 
 // secondary
-$blue-hover: darken($blue, 4%);
-$dark-blue-pro: #1A38A0;
-$green-certif: #1A8C89;
-$dark-orga: #0095C0;
-$orga: #00DDFF;
-$green: #038A25;
-$green-hover: darken($green, 4%);
-$red: #D63F00;
-$red-hover: darken($red, 4%);
-$yellow: #FFBE00;
-$yellow-hover: darken($yellow, 8%);
-$light-blue: #388AFF;
 $pure-orange: #F45C00;
 $pole-emploi:#1B2E57;
-$purple: #8845FF;
+
+// hover
+$blue-hover: darken($blue, 4%);
+$green-hover: darken($green, 4%);
 
 // gradients
-$default-gradient: linear-gradient(135deg, $blue 0%, $purple 100%);
-$green-gradient: linear-gradient(0deg, #52D987 0%, #1A8C89 100%);
-$pix-orga-old-gradient: linear-gradient(0deg, #0D7DC4 0%, #213371 100%);
 $yellow-gradient: linear-gradient(180deg, #FEDC41 0%, #F45C00 100%);
 
-// light
-$grey-5: #FAFBFC;
-$grey-10: #F4F5F7;
-$grey-15: #EAECF0;
-$grey-20: #DFE1E6;
-$grey-22: #C1C7D0;
-$grey-25: #A5ADBA;
-
-// medium
-$grey-30: #97A0AF;
-$grey-35: #8993A4;
-$grey-40: #7A869A;
-$grey-45: #6B778C;
-$grey-50: #5E6C84;
-$grey-60: #505F79;
-
-// dark
-$grey-70: #344563;
-$grey-80: #253858;
-$grey-90: #172B4D;
-$grey-100: #091E42;
-$grey-200: #07142E;
-
-// solids
-$environment-dark: #5E2563;
-$environment-light: #564DA6;
-$communication-dark: #3D68FF;
-$communication-light: #12A3FF;
-$content-dark: #1A8C89;
-$content-light: #52D987;
-$information-dark: #F24645;
-$information-light: #F1A141;
-$security-dark: #AC008D;
-$security-light: #FF3F94;
-
 // status
-$error: #FF4B00;
-$light-red: lighten($error, 8%);
 $dark-error: darken($error, 8%);
-$success: #57C884;
-$warning: #FFBE00;
 
 // box shadows
 $box-shadow-competence-cards: 0 3px 4px 0 rgba(12, 22, 58, 0.1), 0 1px 3px 0 rgba($grey-200, 0.1);
