--- a/mon-pix/app/styles/pages/_update-expired-password-form.scss
+++ b/mon-pix/app/styles/pages/_update-expired-password-form.scss
@@ -1,7 +1,7 @@
 .update-expired-password-form-page {
   display: flex;
   justify-content: center;
-  background: $default-gradient;
+  background: $pix-gradient;
   background-size: cover;
   width: 100%;
   height: 100%;
